student_app/force-app/main/default/objects/Student_Application__c/Student_Application__c.object-meta.xml
<CustomObject>
    <label>Student Application</label>
    <nameField>
        <displayFormat>APP-{00000}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Student Applications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>