student_app/force-app/main/default/objects/Student_Application__c/fields/Admission_Status__c.field-meta.xml
<CustomField>
    <fullName>Admission_Status__c</fullName>
    <label>Admission Status</label>
    <type>Picklist</type>






    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Admitted</fullName>
            </value>
            <value>
                <fullName>Waitlisted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>

</CustomField>