student_app/force-app/main/default/objects/Student_Application__c/fields/Applied_Course__c.field-meta.xml
<CustomField>
    <fullName>Applied_Course__c</fullName>
    <label>Applied Course</label>
    <type>Lookup</type>
    <required>true</required>





    <referenceTo>Course__c</referenceTo>
    <relationshipName>Student_Applications</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>


</CustomField>