student_app/force-app/main/default/objects/Student_Application__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
    <required>true</required>








</CustomField>