student_app/force-app/main/default/objects/Student_Application__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <label>First Name</label>
    <type>Text</type>
    <required>true</required>

    <length>50</length>






</CustomField>