student_app/force-app/main/default/objects/Student_Application__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <label>Last Name</label>
    <type>Text</type>
    <required>true</required>

    <length>50</length>






</CustomField>