student_app/force-app/main/default/objects/Student_Application__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>








</CustomField>