student_app/force-app/main/default/objects/Student_Application__c/recordTypes/Diploma.recordType-meta.xml
<RecordType>
    <fullName>Diploma</fullName>
    <active>true</active>
    <label>Diploma</label>
</RecordType>