student_app/force-app/main/default/objects/Student_Application__c/recordTypes/Postgraduate.recordType-meta.xml
<RecordType>
    <fullName>Postgraduate</fullName>
    <active>true</active>
    <label>Postgraduate</label>
</RecordType>