student_app/force-app/main/default/objects/Student_Application__c/recordTypes/Undergraduate.recordType-meta.xml
<RecordType>
    <fullName>Undergraduate</fullName>
    <active>true</active>
    <label>Undergraduate</label>
</RecordType>