student_app/force-app/main/default/objects/Student_Application__c/validationRules/Date_of_Birth_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_Birth_Validation</fullName>
    <active>true</active>
    <description>Ensures applicants are at least 16 years old.</description>
    <errorConditionFormula>Date_of_Birth__c &gt; TODAY() - (365 * 16)</errorConditionFormula>
    <errorDisplayField>Date_of_Birth__c</errorDisplayField>
    <errorMessage>Student must be at least 16 years old.</errorMessage>
</ValidationRule>