student_app/force-app/main/default/objects/Student_Application__c/validationRules/Lock_Approved_Applications.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Approved_Applications</fullName>
    <active>true</active>
    <description>Prevents editing the application after it has been Approved.</description>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE(Application_Status__c), &quot;Approved&quot;) &amp;&amp; NOT(ISCHANGED(Application_Status__c)) &amp;&amp; NOT(ISCHANGED(Admission_Status__c)) &amp;&amp; NOT(ISCHANGED(Payment_Status__c))</errorConditionFormula>
    <errorMessage>Approved applications cannot be modified.</errorMessage>
</ValidationRule>